5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1679_1880.log
== SUBMITION (2019-04-27 09:24:06) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de uma a 12: "))

if(m <= 0) and (m > 12):
	print ("numero de mes invalido")
elif(m == 1):
	print("janiero")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- EXECUTION TIME:
0.153514
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:24:12) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de uma a 12: "))

if(m <= 0) and (m > 12):
	print ("numero de mes invalido")
elif(m == 1):
	print("janiero")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:24:31) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0) and (m > 12):
	print ("numero de mes invalido")
elif(m == 1):
	print("janiero")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:25:36) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0):
	print("numero de mes invalido")
elif(m == 1):
	print("janiero")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:25:44) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0):
	print("numero de mes invalido")
elif(m == 1):
	print("janiero")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:26:20) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m > 12):
	print("numero de mes invalido")
elif(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:26:58) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0) and (m > 12):
	print("numero de mes invalido")
elif(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:27:42) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0):
	print("numero de mes invalido")
elif(m > 12)	
print("numero de mes invalido")

elif(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- ERROR:
File "XXXX", line 6
    elif(m > 12)	
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:27:49) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0):
	print("numero de mes invalido")
elif(m > 12):	
print("numero de mes invalido")

elif(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- ERROR:
File "XXXX", line 7
    print("numero de mes invalido")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:27:57) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0):
	print("numero de mes invalido")
elif(m > 12):	
	print("numero de mes invalido")

elif(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:28:04) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0):
	print("numero de mes invalido")
elif(m > 12):	
	print("numero de mes invalido")

elif(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 09:28:11) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0):
	print("numero de mes invalido")
elif(m > 12):	
	print("numero de mes invalido")

elif(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 09:28:21) 
-- CODE:
# Entrada de um numero entre 1 e 12
m = int(input("Digite um numero de 1 a 12: "))

if(m <= 0):
	print("numero de mes invalido")
elif(m > 12):	
	print("numero de mes invalido")

elif(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")	
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")	
	

-- EXECUTION TIME:
0.126034
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
